# crowd_prediction_ros

./: .gitignore  CMakeLists.txt  package.xml  setup.py
config/: prediction_params.yaml  prediction_topics.yaml
crowd_synthesis/: CMakeLists.txt  package.xml  setup.py
crowd_synthesis/msg/: MovingParticleStamped.msg  ParticleCrowd.msg
crowd_synthesis/scripts/: crowd_synthesis_server.py
crowd_synthesis/src/crowd_synthesis/: crowd_synthesis.py  pcf.py  test_pcf.py
msg/: ParticleCrowdArray.msg
scripts/: crowd_synthesis_server.py  prediction_node.py  trajec_prediction_node.py  trajec_prediction_server.py
src/crowd_prediction/crowd_synthesis/: crowd_synthesis.py  pcf.py
src/crowd_prediction/prediction_baselines/: const_vel.py
srv/: GetPredictedTrajectories.srv  GetSynthesizedCrowd.srv
trajec_prediction/: CMakeLists.txt  package.xml  setup.py
trajec_prediction/msg/: Vec3GroupTrajectory.msg  Vec3GroupTrajectoryArray.msg  Vec3Trajectory.msg
trajec_prediction/scripts/: prediction_server.py  trajec_prediction_client.py  trajec_prediction_server.py
