<?xml version="1.0"?>
<package format="2">
  <name>trajec_prediction</name>
  <version>0.0.0</version>
  <description>The trajectory prediction package</description>
  <maintainer email="amiryan.j@gmail.com">Javad Amirian</maintainer>
  <url type="website">https://github.com/amiryanj/socialways</url>

  <license>TODO</license>
	
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>  </export>
</package>
